--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,5 @@
 <hgroup>
-  <h1 style="font-family:arial,helvetica,sans-serif; font-size:1.8em; font-weight:bold;">
+  <h1 style="font-family:arial,helvetica,sans-serif; font-weight:bold;">
 	<a href="{{ root_url }}/"><font color="green">Tom</font> <font color="blue">Whipple</font></a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
