does element nesting affect pagerank?

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,7 @@
 <hgroup>
-  <h1 style="font-family:arial,helvetica,sans-serif; font-weight:bold;">
-	<a href="{{ root_url }}/"><font color="green">Tom</font> <font color="blue">Whipple</font></a></h1>
+	<a href="{{ root_url }}/">
+  	<h1 style="font-family:arial,helvetica,sans-serif; font-weight:bold;"><font color="green">Tom</font> <font color="blue">Whipple</font></h1>
+	</a>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
